<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ZzzTimer</string>
    <string name="err_app_init">fail to initilize application</string>
    <string name="dateSliderTitle">Selected date</string>
    <string name="not_spcify_name">Not splecify Item Name.</string>
    <string name="help">Help</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="minite_after">Minute After</string>
    <string name="kill_app_count">Count</string>
    <string name="start_app_count">Count</string>
    <string name="screen">Screen</string>
    <string name="wifi">Wifi</string>
    <string name="audio">Audio</string>
    <string name="time">Time</string>
    <string name="kill_apps">Kill Applications</string>
    <string name="start_apps">Start Applications</string>
    <string name="apply">Apply</string>
    <string name="select_all">Select All</string>
    <string name="clear_all">Clear All</string>
    <string name="new_item_timer">New Timer Item</string>
    <string name="select_kill_apps">Select Kill Applications</string>
    <string name="select_start_apps">Select Start Applications</string>
    <string name="are_you_add_kill_app_on_start_app">Is the application added to [Start Applications] added to [Kill Applications]? </string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="set">Set</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="wake_on_lan">Wake on LAN</string>
    <string name="wol_invalid_ip">invalid Broadcast Address was specified. </string>
    <string name="wol_invalid_port">invalid Port number was specified. </string>
    <string name="wol_invalid_mac">invalid MAC Address was specified. </string>
    <string name="repeat">Repeat</string>
    <string name="disable">Disable</string>
    <string name="are_you_cancel_timer">Are you sure you want to cancel timer?</string>
    <string name="wol_enable">Enable Wake on LAN</string>
    <string name="wol_broadcast">Broadcast Address</string>
    <string name="wol_portnumber">Wake On Lan Port Number</string>
    <string name="wol_macaddressr">MAC Address</string>
    <string name="wol_repeat">Repeat setting</string>
    
    <string name="mic_recod">Voice Recorder</string>
    <string name="non_install_pipopadroid">It is necessary to install pipoparoid separately to perform voice recording.</string>
    
    
    <string name="add">Add</string>
    <string name="timer">Timer</string>
    <string name="computer">Computer</string>
    <string name="preference">Preference</string>
    <string name="name">Name</string>
    <string name="remote_ope">Remote Operation</string>
    <string name="ip_addr">IP Address</string>
    <string name="hint_name">Please Enter Name</string>
    <string name="hint_ip_addr">Please enter IP Address Or Host Name</string>
    <string name="zzz__portnumber">Zzz Server Port Number</string>
    <string name="shutdown_opts">Shutdown Options</string>
    <string name="restart_opts">Restart Options</string>
    <string name="exe_image">Execute Image</string>
    <string name="exe_params">Execute Parameters</string>
    <string name="exe_cur_dir">Execute Current Directory</string>
    <string name="hit_exec_image">Please Enter Execute image</string>
    <string name="hit_exec_params">Please Enter Execute parameters</string>
    <string name="hit_exec_cur_dir">Please Enter Current directory</string>
    <string name="hit_show_alert_time">Please Enter Show Alert Time</string>
    <string name="hit_alert_message">Please Enter Alert Message</string>
    
    <string name="dlg_title_computer_ope">Computer Operation</string>
    <string name="confirm">Confirm</string>
    <string name="dlg_message_deleete_computer">Are you delete Computer?</string>
    <string name="show_alert_time">Show Alert Time</string>
    <string name="alert_message">Alert Message</string>
    <string name="second">second</string>
    <string name="hib_restart">Restart</string>
    <string name="hib_restart_alert_time">Restart Alert Time</string>
    <string name="msg_add_timer">Timer Item has not been added.To add, from the menu, please press the Add button.</string>
    <string name="msg_add_computer">Computer has not been added.To add, from the menu, please press the Add button.</string>
    <string name="select_computer">Select Computer</string>
    <string name="title_add_computer">Add Computer</string>
    <string name="title_edt_computer">Edit Computer</string>
    <string name="title_add_timer">Add Timer</string>
    <string name="hint_add_timer_name">Please Enter Timer Name</string>
    <string name="timer_name">Timer Name</string>
    <string name="err_remote_ope_connect_server">fail to connect server.</string>
    <string name="err_remote_ope_internal_error">Internal Error.</string>
    <string name="err_remote_ope_no_logon">not found logon user.</string>
    <string name="err_remote_ope_execute_proc">fail to execute proccess.</string>
    <string name="err_remote_ope_not_found_user">specified user is not found.</string>
    <string name="err_remote_ope_timeout">request timeout.</string>
    <string name="err_remote_ope_restart_time">To restart, please specify a restart time</string>
    <string name="err_remote_ope_remote_command">Remote command to be executed has not been entered</string>
    <string name="err_incorrect_ip">IP Address that is entered is incorrect.</string>
    <string name="msg_remote_ope_complete">Remote operation request complete.</string>
    
    <string name="play_music">Play Music</string>
    <string name="title_play_music">Play Music Setting</string>
    <string name="play_music_enable">Play Music</string>
    <string name="play_music_select">Select Music Play List</string>
    <string name="play_music_shuffle">Shuffle</string>
    <string name="play_music_scrobbling">Scrobbling</string>
    
    <string name="hint_playlist">Please Enter Playlist Name</string>
    <string name="title_add_playlist">Add Playlist</string>
    <string name="title_add_playlist_member">Add Playlist Members</string>
    <string name="title_edt_playlist">Edit Playlist</string>
    <string name="title_del_playlist">Delete Playlist</string>
    <string name="title_del_playlist_member">Delete Playlist Member</string>
    <string name="title_ope_playlist">Playlist operation</string>
    <string name="msg_del_playlist">Are you sure you want to delete playlist?</string>
    <string name="msg_del_playlist_member">Are you sure you want to delete selected playlist member?</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_no_exist">Playlist does not exist.Please add a playlist.</string> 
    <string name="errMsgNotExistStrage">SD card is not prepared.</string>  
   
    <string name="record_list">Record List</string>
    <string name="menu">Menu</string>
    <string name="select_action">Please Select Action</string>
    <string name="please_input_title">Please input title.</string>
    <string name="no_specify_title">No specify Title.</string>
    <string name="are_you_del_file">Are you delete this file?</string>
    <string name="msg_reg_not_computer">Computer is not registered</string>
    
    <string name="title_purchase_ogg">Do you want to purchase a license OGG?</string>
    <string name="msg_purchase_ogg">Recording in OGG can not be recorded only up to three minutes. When you purchase a license, you can record more than three minutes.</string>
    <string name="err_billing_not_supported_message">Purchase service is currently not available.</string>
    <string name="title_select_volum">Please select volume</string>
    
    <string name="err_reconsnize_voice_input_command">Command was entered did not recognize the voice.</string>
    
    
    <string name="title_record_tag">Record TAG</string>
    <string name="recommend">Recommend US</string>
</resources>
